--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,26 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #database storage
+  sqflite: ^2.0.0+3
+
+
+  http: ^0.12.0
+  google_fonts:
+
+  #forma date time
+  intl: ^0.17.0
+  #desplay tools in grid
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
