--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #database storage
-  sqflite: ^2.0.0+3
 
 
-  http: ^0.12.0
+
+
+  #http: ^0.12.0
   google_fonts:
 
   #forma date time
@@ -50,6 +50,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.7
+
+  firebase_core: ^1.3.0
+  firebase_auth: ^3.0.0
+  firebase_auth_web: ^3.0.0
+  provider: ^4.0.4
+  pinput: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
