--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   firebase_auth_web: ^3.0.0
   provider: ^4.0.4
   pinput: ^1.2.0
+  mask_text_input_formatter: ^2.0.0
+  http: ^0.13.4
+  mongo_dart: ^0.7.4
 
 
 dev_dependencies:
