--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   http: ^0.13.4
   mongo_dart: ^0.7.4
+  flutter_spinkit: ^5.1.0
 
 
 dev_dependencies:
